syntax = "proto3";
package isuxportal.proto.resources;


import "google/protobuf/timestamp.proto";
import "isuxportal/resources/survey_response.proto";

message BenchmarkResult {
  bool finished = 1;
  bool passed = 2;
  int64 score = 3;
  ScoreBreakdown score_breakdown = 4;
  message ScoreBreakdown {
    int64 raw = 1;
    int64 deduction = 2;
  }

  // only present for finished result
  Execution execution = 5;
  message Execution {
    string reason = 1;
    string stdout = 2;
    string stderr = 3;
    int32 exit_status = 4;
    int32 exit_signal = 5;
    bool signaled = 6;
  }

  google.protobuf.Timestamp marked_at = 6;

  // TODO: not available in responses
  SurveyResponse survey_response = 8;
}
